[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Jay Welsh <thealchemicalopus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.0"
mkdocs-material = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
